# frappe

./: CMakeLists.txt  Makefile  README.md
docker/: Dockerfile.cross  Dockerfile.shell
include/: frappe.hpp
scripts/: build_all.sh  build_containers.sh  build_image.sh  build_opencv.sh  compile.sh  install_packages.sh  setup.sh  toolchain_rpi.cmake
shaders/: colour.glsl  null.glsl  qpu_blit_tiled.asm  qpu_shi_tomasi_opt_tiled.asm  qpu_shi_tomasi_scale_tiled.asm  qpu_suppress_opt_tiled.asm  qpu_warp.asm  showcontours.glsl  showcorners.glsl  sobel_shi_tomasi.glsl  suppress.glsl  vs.glsl  vs_simple.glsl  vs_tex.glsl
src/: detector.cpp  detector.hpp  gcs.cpp  gcs.h  glhelpers.cpp  glhelpers.hpp  mailbox.cpp  mailbox.h  main.cpp  min_detect.cpp  minimal.cpp  qpu_base.cpp  qpu_base.h  qpu_info.cpp  qpu_info.h  qpu_program.cpp  qpu_program.h  qpu_registers.h  shaders.hpp  small.cpp  stream.cpp  tui.cpp  tui.hpp
vc4/: crt0.S  functions.elf  helpers.S  vpu_functions.c
